Bug 1280344 - Use first continuation's normal position in computing sticky scroll ranges for APZ. r=dholbert, a=gchang

MozReview-Commit-ID: L0wRgCvb8h8